--- a/styles/style.css
+++ b/styles/style.css
@@ -298,6 +298,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 2rem;
 }
 .page6__faq {
   width: 100%;
@@ -331,7 +332,7 @@ body {
 .page6__faq--answer {
   width: 60%;
   /* padding: 0.5rem 0; */
-  height: 0px;
+  height: 0;
   transition: height 0.3s ease;
   overflow: hidden;
 }
