--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ body {
   top: 1rem;
   right: 2rem;
   cursor: pointer;
+  z-index: 1;
 }
 .page1__desktop__nav ul {
   display: flex;
@@ -445,6 +446,7 @@ body {
     transform: translateX(100%);
 
     /* padding: 1rem 0; */
+    z-index: 3;
   }
   .page1__mobile__nav ul {
     /* padding: 4rem 0; */
@@ -477,8 +479,10 @@ body {
   }
   .hamburger__open {
     display: block;
+    /* z-index: 99999; */
   }
   .hamburger__close {
+    z-index: 99999;
     display: block;
   }
 
